--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,17 +4,6 @@
     "es2021": true
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react/recommended"],
-  "overrides": [
-    {
-      "env": {
-        "node": true
-      },
-      "files": [".eslintrc.{js,cjs}"],
-      "parserOptions": {
-        "sourceType": "script"
-      }
-    }
-  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -24,6 +13,9 @@
   "rules": {
     "semi": [2, "never"],
     "jsx-quotes": ["error", "prefer-single"],
-    "react/react-in-jsx-scope": "off"
+    "quotes": ["error", "single"],
+    "react/react-in-jsx-scope": "off",
+    "no-trailing-spaces": "error",
+    "comma-dangle": "error"
   }
 }
