--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,19 +3,30 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": ["@typescript-eslint", "react", "prettier"],
   "rules": {
-    "semi": [2, "never"],
-    "jsx-quotes": ["error", "prefer-single"],
-    "quotes": ["error", "single"],
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "printWidth": 180,
+        "trailingComma": "none",
+        "semi": false,
+        "jsxSingleQuote": true
+      }
+    ],
     "react/react-in-jsx-scope": "off",
-    "no-trailing-spaces": "error",
-    "comma-dangle": "error"
+    "no-trailing-spaces": "error"
   }
 }
