--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@rise8/tailwind-pixel-perfect-preset": "^1.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
